--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,18 @@
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
+@import "blocks/wrapp.scss";
+@import "blocks/header.scss";
+@import "blocks/main-unit.scss";
+@import "blocks/info.scss";
+@import "blocks/form.scss";
+@import "blocks/contacts.scss";
+@import "blocks/footer.scss";
+@import "blocks/logo.scss";
+@import "blocks/menu.scss";
+@import "blocks/social.scss";
+@import "blocks/gym.scss";
+@import "blocks/promo.scss";
 
 // ---------------------------------
 
