--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,6 +12,10 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 
 $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
+$color-sapphire:                    #102654;
+$color-light-slate-grey:            #74819c;
+$color-black-russian:               #030A1A;
+$color-torch-red:                   #ed0233;
 
 // Gradient
 
@@ -28,6 +32,10 @@ $fz-default:                        16px;
 $ff-rouble:                         "Rouble", "Arial", sans-serif;
 
 $ff-placeholder:                    "Placeholder", "Arial", sans-serif;
+
+$ff-alumni-sans:                    "Alumni Sans", "Arial", sans-serif;
+
+$ff-roboto-condensed:               "Roboto Condensed", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
