--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -1,8 +1,8 @@
 .gym {
-  padding: 120px 103px 120px 163px;
+  padding: 120px 103px 236px 163px;
 
   @media screen and (max-width: 1199px) {
-    padding: 100px 45px;
+    padding: 100px 45px 185px;
   }
 
   @media screen and (max-width: 767px) {
@@ -167,7 +167,7 @@
   @media screen and (max-width: 767px) {
     position: relative;
     width: 100%;
-    margin-bottom: 70px;
+    margin-bottom: 63px;
     left: 0;
     top: 0;
   }
