--- a/source/sass/blocks/main-unit.scss
+++ b/source/sass/blocks/main-unit.scss
@@ -122,6 +122,15 @@
   text-transform: uppercase;
   color: $color-default-white;
   border: 4px solid $color-default-white;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media screen and (max-width: 1199px) {
     margin: 0;
