--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,11 +11,19 @@ $color-transparent:                 rgba(255, 255, 255, 0);
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
 $color-neon-blue:                   #2c39f2;
-$color-torch-red:                   #ff1553;
+$color-torch-red-1:                 #ff1553;
 $color-sapphire:                    #102654;
 $color-light-slate-grey:            #74819c;
 $color-black-russian:               #030A1A;
 $color-torch-red:                   #ed0233;
+$color-ghost-white:                 #f8f9fc;
+$color-crimson:                     #d10a42;
+$color-chambray:                    #495a7d;
+$color-egyptian-blue:               #103aae;
+$color-whisper:                     #e8e8e8;
+$color-resolution-blue:             #1c3374;
+$color-spindle:                     #b6bdcc;
+$color-persian-blue:                #2e35ac;
 
 // Gradient
 
