--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -120,38 +120,68 @@
   }
 }
 
-// .gym__video {
-//   position: absolute;
-//   bottom: -115px;
-//   left: -63px;
-// }
-
-.videoWrapper {
+.gym__video-wrapper {
   position: relative;
 }
 
-.videoWrapper .video-modal-poster img {
+.gym__video-cover img  {
   position: absolute;
-  bottom: -115px;
+  top: -113px;
   left: -63px;
   z-index: 2;
-  background: rgba(20, 54, 122, 0.5);
+
+  @media screen and (max-width: 1199px) {
+    top: -84px;
+    left: 40.5%;
+    width: 266px;
+    height: 167px;
+  }
+
+  @media screen and (max-width: 890px) {
+      left: 33%;
+  }
+
+  @media screen and (max-width: 768px) {
+      left: 30.5%;
+  }
+
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    margin-bottom: 63px;
+    left: 0;
+    top: -237px;
+  }
 }
 
-.videoWrapper .video-modal-poster:hover img {
-  z-index:0;
+.gym__video-cover {
+  position: relative;
+
+  &.hidden {
+    display: none;
+  }
 }
 
-.videoWrapper iframe {
+.gym__video-cover img::after {
   position: absolute;
-  bottom: -115px;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(20, 54, 122, 0.5);
+  z-index: 20;
+}
+
+.gym__video {
+  position: absolute;
+  top: -113px;
   left: -63px;
 
   z-index: 1;
 
   @media screen and (max-width: 1199px) {
-    bottom: -83px;
-    left: 36%;
+    top: -84px;
+    left: 40.5%;
     width: 266px;
     height: 167px;
   }
@@ -173,19 +203,62 @@
   }
 }
 
-.videobtn svg {
+.gym__video-button {
   position: absolute;
-  z-index: 3;
-  top: -10px;
-  left: 60px;
+  top: -34px;
+  left: 84px;
+  border: none;
+  z-index: 10;
+  width: 72px;
+  height: 72px;
+  z-index: 10;
+  border: none;
+  border-radius: 50%;
+  background: linear-gradient(44.89deg, #003D85 25.38%, #B80027 74.89%);
   cursor: pointer;
-}
 
-.videobtn:active,
-iframe:active {
-  z-index: 0;
-}
+  svg {
+    transform: translateX(2px);
+  }
 
-.ytp-large-play-button {
-  background-image: url("../img/svg/Group\ 2.svg") !important;
+  &::after {
+    content: "";
+    position: absolute;
+    top: -15px;
+    left: -14px;
+    display: block;
+    background: linear-gradient(80deg, #ed0233 20%, #003eb7 90%);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    opacity: 0.2;
+  }
+
+  @media screen and (max-width: 1199px) {
+    width: 52px;
+    height: 52px;
+    top: -27px;
+    left: 51%;
+
+    @media screen and (max-width: 890px) {
+      left: 46%;
+    }
+
+    svg {
+      width: 12px;
+      height: 12px;
+    }
+
+    &::after {
+      width: 73px;
+      height: 73px;
+      top: -11px;
+      left: -11px;
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    top: -180px;
+    left: 42%;
+  }
 }
