--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -40,6 +40,8 @@
 }
 
 .coaches__item {
+  width: 260px;
+  height: 294px;
   margin: 0 40px 0 0;
   position: relative;
   list-style-type: none;
@@ -49,10 +51,14 @@
 
   @media screen and (max-width: 1199px) {
     margin: 0 30px 0 0;
+    width: 268px;
+    height: 294px;
   }
 
   @media screen and (max-width: 767px) {
     margin: 0;
+    width: 226px;
+    height: 274px;
   }
 }
 
@@ -62,8 +68,10 @@
   // top: 0;
   // left: 0;
   object-fit: cover;
-  height: 100%;
-  width: 100%;
+  // height: 100%;
+  // width: 100%;
+  width: 260px;
+  height: 294px;
   box-shadow: 0px 0px 35px rgba(42, 59, 99, 0.17);
 
   @media screen and (max-width: 1199px) {
