--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -120,11 +120,7 @@
   }
 }
 
-.gym__video-wrapper {
-  position: relative;
-}
-
-.gym__video-cover img  {
+.gym__video-img  {
   position: absolute;
   top: -113px;
   left: -63px;
@@ -155,26 +151,31 @@
 
 .gym__video-cover {
   position: relative;
+  // z-index: 2;
+  width: 100%;
+  height: 100%;
 
   &.hidden {
     display: none;
   }
 }
 
-.gym__video-cover img::after {
+.gym__video-cover::before {
   position: absolute;
   content: "";
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  background: rgba(20, 54, 122, 0.5);
-  z-index: 20;
+  display: block;
+  z-index: 100;
+  background-color: #14367A;
+  opacity: 0.5;
 }
 
 .gym__video {
   position: absolute;
-  top: -113px;
+  top: 288px;
   left: -63px;
 
   z-index: 1;
