--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -12,6 +12,12 @@
   }
 }
 
+.reviews__container {
+  position: relative;
+  max-width: 560px;
+  margin: auto;
+}
+
 .reviews__title {
   margin: 0 0 37px 10px;
   padding: 0;
@@ -119,4 +125,46 @@
     margin-top: 5px;
     line-height: 138%;
   }
+}
+
+
+.reviews__wrapper-first {
+  position: absolute;
+  z-index: 0;
+  top: 42%;
+  left: 0;
+  width: 100%;
+  height: 40px;
+}
+
+.reviews__button {
+  position: absolute;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  padding: 0;
+  width: 20px;
+  height: 40px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.reviews__button--next {
+  right: -58px;
+  transform: rotate(180deg);
+}
+
+.reviews__button--prev {
+  left: -58px;
 }
