--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -155,9 +155,8 @@
 
 .gym__video-cover {
   position: relative;
-  // z-index: 2;
-  width: 100%;
-  height: 100%;
+  width: 660px;
+  height: 228px;
 
   &.hidden {
     display: none;
@@ -167,10 +166,10 @@
 .gym__video-cover::before {
   position: absolute;
   content: "";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+  width: 364px;
+  height: 228px;
+  top: -113px;
+  left: -63px;
   display: block;
   z-index: 100;
   background-color: #14367a;
