--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -65,7 +65,7 @@
   }
 
   @media screen and (max-width: 767px) {
-    margin: 0;
+    margin: 0 30px 0 0;
     width: 226px;
     height: 274px;
   }
