--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,11 +1,11 @@
 .advantages {
-  max-width: 1200px;
+  max-width: 1366px;
   margin: auto;
-  padding: 97px 164px 133px;
+  padding: 97px 163px 133px 167px;
   background-color: $color-ghost-white;
 
   @media screen and (max-width: 1199px) {
-    padding: 93px 20px 100px 40px;
+    padding: 93px 20px 94px 43px;
   }
 
   @media screen and (max-width: 767px) {
@@ -26,7 +26,7 @@
   text-align: center;
 
   @media screen and (max-width: 1199px) {
-    margin: 0 15px 40px 0;
+    margin: 0 43px 39px 0;
     font-size: 42px;
     line-height: 50px;
   }
@@ -34,19 +34,20 @@
   @media screen and (max-width: 767px) {
     font-size: 32px;
     line-height: 38px;
+    margin: 0 18px 30px 0;
   }
 }
 
 .advantages__list {
-  position: relative;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0 331px;
+  grid-template-columns: 1fr 240px 1fr;
+  gap: 0 45px;
   margin: 0 3px 0 0;
   padding: 0;
 
   @media screen and (max-width: 1199px) {
-    gap: 0 8px;
+    grid-template-columns: 1fr 1fr;
+    gap: 41px 5px;
   }
 
   @media screen and (max-width: 767px) {
@@ -64,7 +65,7 @@
 
   @media screen and (max-width: 767px) {
     text-align: center;
-    margin: 0 0 32px;
+    margin: 0 0 20px;
     padding: 0 40px;
   }
 }
@@ -75,12 +76,13 @@
   border-bottom: 2px solid rgba(209, 10, 66, 0.2);
 
   @media screen and (max-width: 1199px) {
-    margin-bottom: 247px;
+    margin: 0;
+    padding: 0;
     border: none;
   }
 
   @media screen and (max-width: 767px) {
-    margin: 0 0 32px;
+    margin: 0 0 21px;
     padding: 0 40px;
   }
 }
@@ -108,19 +110,25 @@
   font-weight: 700;
   font-size: 71px;
   line-height: 150%;
-  background: linear-gradient(127.61deg, #d10a42 0%, #0041ca 45.58%);
+  background: linear-gradient(142.51deg, #d10a42 0%, #0041ca 87.33%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+  color: transparent;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   @media screen and (max-width: 1199px) {
     font-size: 58px;
     margin: -11px 0 0 3px;
   }
+
+  @media screen and (max-width: 767px) {
+    margin: auto;
+  }
 }
 
 .advantages__container-description {
-  margin: -21px 0 0 18px;
+  margin: -21px 0 0 16px;
   padding: 0;
   font-family: $ff-roboto-condensed;
   font-weight: 400;
@@ -129,7 +137,7 @@
   color: $color-persian-blue;
 
   @media screen and (max-width: 1199px) {
-    margin-top: -17px;
+    margin: -19px 0 0 2px;
   }
 
   @media screen and (max-width: 767px) {
@@ -171,95 +179,50 @@
 }
 
 .advantages__item-index {
-  position: absolute;
-  padding: 36px 34px 58px;
-  max-width: 240px;
-  top: 15px;
-  background-color: $color-resolution-blue;
-  color: $color-default-white;
-
-  @media screen and (max-width: 2100px) {
-    left: 665px;
-  }
-
-  @media screen and (max-width: 1900px) {
-    left: 623px;
-  }
-
-  @media screen and (max-width: 1750px) {
-    left: 589px;
-  }
-
-  @media screen and (max-width: 1680px) {
-    left: 550px;
-  }
-
-  @media screen and (max-width: 1600px) {
-    left: 518px;
-  }
-
-  @media screen and (max-width: 1534px) {
-    left: 486px;
-  }
-
-  @media screen and (max-width: 1470px) {
-    left: 450px;
-  }
-
-  @media screen and (max-width: 1400px) {
-    left: 415px;
-  }
-
-  @media screen and (max-width: 1366px) {
-    left: 400px;
-  }
-
-  @media screen and (max-width: 1300px) {
-    left: 363px;
-  }
-
-  @media screen and (max-width: 1230px) {
-    left: 322px;
-  }
+  margin-top: 15px;
+  max-height: 307px;
+  grid-row: 1/3;
+  grid-column: 2/3;
 
   @media screen and (max-width: 1199px) {
-    left: 333px;
-  }
-
-  @media screen and (max-width: 1199px) {
-    top: 122px;
-    max-width: 442px;
-    padding: 16px 135px 37px;
-  }
-
-  @media screen and (max-width: 1050px) {
-    left: 276px;
-  }
-
-  @media screen and (max-width: 900px) {
-    left: 200px;
-  }
-
-  @media screen and (max-width: 800px) {
-    left: 155px;
-  }
-
-  @media screen and (max-width: 768px) {
-    left: 123px;
+    grid-column: 1/3;
+    grid-row: 2/3;
+    margin: auto;
   }
 
   @media screen and (max-width: 767px) {
-    position: relative;
-    top: 10px;
-    left: 0;
     max-width: 100%;
-    padding: 21px 55px 43px;
-    margin-bottom: 48px;
+    margin: 20px 0 28px;
+    padding: 0;
+  }
+}
+
+.advantages__wrapper {
+  padding: 36px 34px 58px;
+  background-color: $color-resolution-blue;
+  color: $color-default-white;
+
+  @media screen and (max-width: 1199px) {
+    padding: 16px 135px 37px;
+    max-width: 442px;
+    margin: 0 22px 0 0;
+  }
+
+  @media screen and (max-width: 767px) {
+    max-width: 100%;
+    margin: 0;
+    padding: 21px 53px 43px 55px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .advantages__container-item-index {
+    margin-right: 17px;
   }
 }
 
 .advantages__container-number-index {
-  margin: 0 0 0 25px;
+  margin: 0 0 0 27px;
   padding: 0;
   max-width: 100px;
   font-family: $ff-roboto-condensed;
@@ -268,7 +231,7 @@
   line-height: 150%;
 
   @media screen and (max-width: 767px) {
-    margin: 0;
+    margin: auto;
   }
 }
 
@@ -285,7 +248,7 @@
   }
 
   @media screen and (max-width: 767px) {
-    margin: -26px 0 0;
+    margin: -26px 0 0 20px;
   }
 }
 
