--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -1,8 +1,8 @@
 .gym {
-  padding: 120px 103px 236px 163px;
+  padding: 120px 103px 121px 163px;
 
   @media screen and (max-width: 1199px) {
-    padding: 100px 45px 185px;
+    padding: 100px 45px 103px;
   }
 
   @media screen and (max-width: 767px) {
@@ -142,25 +142,9 @@
   left: 0;
   z-index: 2;
 
-  // @media screen and (max-width: 1199px) {
-  //   width: 266px;
-  //   height: 167px;
-  // }
-
-  // @media screen and (max-width: 890px) {
-  //   left: 33%;
-  // }
-
-  // @media screen and (max-width: 768px) {
-  //   left: 30.5%;
-  // }
-
   @media screen and (max-width: 767px) {
     width: 100%;
     height: 167px;
-    // margin-bottom: 63px;
-    // left: 0;
-    // top: -237px;
   }
 }
 
@@ -220,20 +204,8 @@
     height: 167px;
   }
 
-  // @media screen and (max-width: 890px) {
-  //   left: 33%;
-  // }
-
-  // @media screen and (max-width: 768px) {
-  //   left: 30.5%;
-  // }
-
   @media screen and (max-width: 767px) {
-    // position: relative;
     width: 100%;
-    // margin-bottom: 63px;
-    // left: 0;
-    // top: 0;
   }
 }
 
@@ -249,6 +221,7 @@
   cursor: pointer;
 
   svg {
+    margin-top: 2px;
     transform: translateX(2px);
   }
 
@@ -268,10 +241,6 @@
   @media screen and (max-width: 1199px) {
     width: 52px;
     height: 52px;
-
-    // @media screen and (max-width: 890px) {
-    //   left: 46%;
-    // }
 
     svg {
       width: 12px;
