Добавляет исправления по код-ревью

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -111,11 +111,9 @@
   font-size: 71px;
   line-height: 150%;
   background: linear-gradient(142.51deg, #d10a42 0%, #0041ca 87.33%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   background-clip: text;
   color: transparent;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 
   @media screen and (max-width: 1199px) {
     font-size: 58px;
