--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -62,9 +62,18 @@
     margin: 0 30px 0 0;
   }
 
+  @media screen and (max-width: 768px) {
+    height: 294px;
+  }
+
   @media screen and (max-width: 767px) {
     margin: 0 30px 0 0;
+    height: 100%;
   }
+
+  @media screen and (max-width: 320px) {
+    height: 274px;
+ }
 }
 
 .coaches__img {
@@ -117,9 +126,6 @@
   opacity: 0;
   pointer-events: none;
   overflow-y: scroll;
-
-  @media screen and (max-width: 1199px) {
-  }
 
   @media screen and (max-width: 767px) {
     padding: 65px 33px 48px 50px;
@@ -219,13 +225,8 @@
   z-index: 10;
 }
 
-.coaches__wrapper-next {
-  position: absolute;
-  z-index: 0;
+.coaches .slider-button {
   top: 60%;
-  left: 0;
-  width: 100%;
-  height: 40px;
 
   @media screen and (max-width: 1199px) {
     top: 56%;
@@ -233,52 +234,5 @@
 
   @media screen and (max-width: 767px) {
     top: 57%;
-  }
-}
-
-.coaches__button {
-  position: absolute;
-  z-index: 100;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-  padding: 0;
-  width: 20px;
-  height: 40px;
-  background: transparent;
-  border: none;
-  cursor: pointer;
-
-  &:hover {
-    opacity: 0.6;
-  }
-
-  &:active {
-    opacity: 0.3;
-  }
-}
-
-.coaches__button--next {
-  right: 45px;
-  transform: rotate(180deg);
-
-  @media screen and (max-width: 767px) {
-    right: 11px;
-  }
-}
-
-.coaches__button--prev {
-  left: 45px;
-
-  @media screen and (max-width: 767px) {
-    left: 11px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .coaches__svg {
-    width: 10px;
-    height: 19px;
   }
 }
