--- a/source/sass/blocks/main-unit.scss
+++ b/source/sass/blocks/main-unit.scss
@@ -121,6 +121,7 @@
   align-items: center;
   letter-spacing: 0.05em;
   text-transform: uppercase;
+  text-align: center;
   color: $color-default-white;
   border: 4px solid $color-default-white;
   cursor: pointer;
