--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -58,7 +58,9 @@
 }
 
 .tabs__content {
-  height: 401px;
+  // height: 401px;
+  margin: 0;
+  padding: 0;
 }
 
 .tabs__element {
@@ -83,7 +85,7 @@
   list-style-type: none;
   margin: 0;
   max-width: 360px;
-  padding: 49px 70px 62px;
+  padding: 49px 25px 62px;
   color: $color-sapphire;
   background-color: $color-default-white;
   border: 7px solid $color-default-white;
@@ -180,7 +182,8 @@
   position: relative;
   display: block;
   max-width: 100%;
-  margin: 36px 0 0;
+  max-width: 70%;
+  margin: 36px auto auto;
   padding: 23px;
   font-family: $ff-roboto-condensed;
   font-weight: 700;
@@ -204,6 +207,7 @@
   }
 
   @media screen and (max-width: 1199px) {
+    max-width: 100%;
     margin: auto;
     padding: 25px;
     margin-top: 34px;
