--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -84,33 +84,81 @@
 }
 
 .coaches__heading {
-  margin: 0 0 22px;
+  margin: 0 0 21px;
   position: absolute;
   bottom: 0;
-  left: 78px;
+  left: 30%;
   font-family: $ff-roboto-condensed;
   font-weight: 700;
   font-size: 18px;
   line-height: 150%;
 
+  @media screen and (max-width: 1199px) {
+    left: 37%;
+  }
+
+  @media screen and (max-width: 900px) {
+    left: 32%;
+  }
+
   @media screen and (max-width: 767px) {
-    left: 60px;
+    left: 40%;
+  }
+
+  @media screen and (max-width: 500px) {
+    left: 33%;
+  }
+
+  @media screen and (max-width: 320px) {
+    left: 27%;
   }
 }
 
 .coaches__heading-index {
-  left: 70px;
+  left: 27%;
+
+  @media screen and (max-width: 1199px) {
+    left: 35%;
+  }
+
+  @media screen and (max-width: 900px) {
+    left: 26%;
+  }
 
   @media screen and (max-width: 767px) {
-    left: 55px;
+    left: 40%;
+  }
+
+  @media screen and (max-width: 500px) {
+    left: 33%;
+  }
+
+  @media screen and (max-width: 320px) {
+    left: 24%;
   }
 }
 
 .coaches__heading-next {
-  left: 58px;
+  left: 22%;
+
+  @media screen and (max-width: 1199px) {
+    left: 35%;
+  }
+
+  @media screen and (max-width: 900px) {
+    left: 26%;
+  }
 
   @media screen and (max-width: 767px) {
-    left: 40px;
+    left: 37%;
+  }
+
+  @media screen and (max-width: 500px) {
+    left: 33%;
+  }
+
+  @media screen and (max-width: 320px) {
+    left: 20%;
   }
 }
 
@@ -120,19 +168,20 @@
   position: absolute;
   left: 0;
   top: 0;
-  padding: 76px 40px 50px 71px;
+  padding: 76px 40px 50px 40px;
   background-color: rgba(16, 38, 84, 0.89);
   z-index: 1;
   opacity: 0;
   pointer-events: none;
-  overflow-y: scroll;
 
   @media screen and (max-width: 767px) {
-    padding: 65px 33px 48px 50px;
+    padding: 65px 33px 48px 33px;
   }
 }
 
-.coaches__item:hover .coaches__container {
+.coaches__item:hover .coaches__container,
+.coaches__item:focus .coaches__container,
+.coaches__item:focus-within .coaches__container {
   opacity: 1;
   pointer-events: all;
 
@@ -142,7 +191,9 @@
   }
 }
 
-.coaches__item:hover .coaches__heading {
+.coaches__item:hover .coaches__heading,
+.coaches__item:focus .coaches__heading,
+.coaches__item:focus-within .coaches__heading {
   top: 52px;
   z-index: 10;
 
@@ -157,7 +208,8 @@
 
 @media screen and (max-width: 1199px) {
   .coaches__item:active .coaches__container,
-  .coaches__item:focus .coaches__container {
+  .coaches__item:focus .coaches__container,
+  .coaches__item:focus-within .coaches__container {
     opacity: 1;
     pointer-events: all;
   }
@@ -165,7 +217,8 @@
 
 @media screen and (max-width: 1199px) {
   .coaches__item:active .coaches__heading,
-  .coaches__item:focus .coaches__heading {
+  .coaches__item:focus .coaches__heading,
+  .coaches__item:focus-within .coaches__heading {
     top: 52px;
     z-index: 10;
   }
@@ -173,13 +226,14 @@
 
 @media screen and (max-width: 767px) {
   .coaches__item:active .coaches__heading,
-  .coaches__item:focus .coaches__heading {
+  .coaches__item:focus .coaches__heading,
+  .coaches__item:focus-within .coaches__heading {
     top: 42px;
   }
 }
 
 .coaches__container p {
-  margin: 0 0 33px 33px;
+  margin: 0 0 33px;
   padding: 0;
   font-family: $ff-roboto-condensed;
   font-weight: 400;
@@ -187,20 +241,28 @@
   line-height: 150%;
   align-items: center;
   color: $color-spindle;
+  text-align: center;
 
   @media screen and (max-width: 767px) {
-    margin: 0 0 33px 37px;
+    margin: 0 0 34px;
   }
 }
 
 .coaches__container-list {
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 31px;
+  max-height: 130px;
+  overflow-y: scroll;
+
+  @media screen and (max-width: 767px) {
+    padding: 0 0 0 17px;
+  }
 }
 
 .coaches__container-item {
-  margin: 0;
+  margin: auto;
   padding: 0;
+  max-width: 300px;
   list-style-type: none;
   text-align: start;
 }
@@ -211,6 +273,7 @@
   padding: 0;
   font-size: 14px;
   color: $color-default-white;
+  text-align: start;
 }
 
 .coaches__container-item p::after {
