--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,7 +1,6 @@
 .contacts {
   margin: 0;
   padding: 56px 101px 63px 120px;
-  border-top: 1px solid $color-light-slate-grey;
 
   @media screen and (max-width: 1315px) {
     padding: 56px 91px 63px 100px;
@@ -57,7 +56,7 @@
     position: absolute;
     content: "";
     width: 1px;
-    height: 102px;
+    height: 84%;
     top: 6px;
     left: 51%;
     background-color: $color-light-slate-grey;
@@ -77,6 +76,7 @@
     display: flex;
     flex-direction: column;
     gap: 0;
+    min-width: 0;
 
     &::after {
       display: none;
