--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding: 41px 103px 35px;
+  padding: 43px 103px 33px;
   background-color: $color-black-russian;
   color: $color-default-white;
 
@@ -8,11 +8,12 @@
   }
 
   @media screen and (max-width: 767px) {
-    padding: 51px 15px 52px;
+    padding: 46px 15px 52px;
   }
 }
 
 .footer__wrapper {
+  position: relative;
   max-width: 1200px;
   margin: auto;
   display: flex;
@@ -20,5 +21,91 @@
 
   @media screen and (max-width: 767px) {
     flex-direction: column;
+  }
+}
+
+.footer__logo-link {
+  display: flex;
+  margin: 0;
+  padding: 10px 0 5px 0;
+
+  @media screen and (max-width: 1199px) {
+    width: 82px;
+    height: 22px;
+    padding: 0;
+  }
+
+  @media screen and (max-width: 767px) {
+    box-sizing: content-box;
+    width: 68px;
+    height: 19px;
+    padding: 5px 0;
+  }
+}
+
+.footer__list {
+  max-width: 620px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 0 0 31%;
+  padding: 0;
+  list-style-type: none;
+
+  @media screen and (max-width: 1199px) {
+    margin: 0 0 0 20%;
+    max-width: 425px;
+  }
+
+  @media screen and (max-width: 767px) {
+    margin: 0;
+    display: block;
+    column-count: 2;
+    column-gap: 30px;
+    padding: 0;
+  }
+}
+
+.footer__logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  @media screen and (max-width: 767px) {
+    position: static;
+    margin-bottom: 11px;
+  }
+}
+
+.footer__item {
+  margin: 0;
+  margin-right: 25px;
+  padding: 0;
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  @media screen and (max-width: 1199px) {
+    margin-right: 15px;
+  }
+
+  @media screen and (max-width: 767px) {
+    margin-right: 0;
+    margin-bottom: 16px;
+  }
+}
+
+.footer__link {
+  margin: 0;
+  font-family: $ff-roboto-condensed;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: $color-default-white;
+
+  @media screen and (max-width: 767px) {
+    font-size: 16px;
+    line-height: 19px;
   }
 }
