--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -228,13 +228,13 @@
   &::after {
     content: "";
     position: absolute;
-    top: -15px;
+    top: -14px;
     left: -14px;
-    display: block;
-    background: linear-gradient(80deg, #ed0233 20%, #003eb7 90%);
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    background: linear-gradient(80deg, #ed0233 20%, #003eb7 90%);
+    -webkit-mask: radial-gradient(48px, rgba(255, 255, 255, 0) 98%, #000000);
     opacity: 0.2;
   }
 
@@ -252,6 +252,8 @@
       height: 73px;
       top: -11px;
       left: -11px;
+      background: linear-gradient(80deg, #ed0233 20%, #003eb7 90%);
+      -webkit-mask: radial-gradient(35px, rgba(255, 255, 255, 0) 98%, #000000);
     }
   }
 }
