--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -26,6 +26,7 @@
   max-width: 1200px;
   margin: auto;
   display: flex;
+  justify-content: center;
 
   @media screen and (max-width: 1199px) {
     display: grid;
@@ -45,10 +46,24 @@
 
   @media screen and (max-width: 1199px) {
     padding: 46px 45px 49px;
+    display: flex;
+    align-items: center;
   }
 
   @media screen and (max-width: 767px) {
     padding: 47px 44px 52px;
+  }
+}
+
+.promo__container {
+  max-width: 344px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0 62px;
+
+  @media screen and (max-width: 1199px) {
+    margin: auto;
+    gap: 2px 35px;
   }
 }
 
@@ -57,7 +72,7 @@
 }
 
 .promo__title {
-  margin: 5px 51px 30px 0;
+  margin: 5px 0 30px 10px;
   padding: 0;
   max-width: 200px;
   font-family: $ff-alumni-sans;
@@ -68,12 +83,21 @@
   letter-spacing: 0.03em;
 
   @media screen and (max-width: 1199px) {
-    margin: 5px 35px 11px 6px;
+    margin: 0 0 0 6px;
     font-size: 48px;
   }
 
   @media screen and (max-width: 767px) {
     margin-top: 3px;
+  }
+}
+
+.promo__wrapper-next {
+  place-self: end;
+  transform: translateY(-13px);
+
+  @media screen and (max-width: 1199px) {
+    transform: translateY(-1px);
   }
 }
 
@@ -89,12 +113,14 @@
 
   @media screen and (max-width: 1199px) {
     padding: 0 0 2px;
+    margin-bottom: 6px;
     max-width: 42px;
     font-size: 12px;
   }
 
   @media screen and (max-width: 767px) {
     padding: 0 0 1px;
+    margin-bottom: 10px;
   }
 }
 
@@ -151,6 +177,10 @@
   padding: 0;
 }
 
+.promo__wrapper-fifth {
+  grid-column: 1/3;
+}
+
 .promo__wrapper-fifth p {
   margin: 0 0 47px;
   padding: 0;
@@ -196,10 +226,10 @@
 
 .promo__img {
   object-fit: cover;
+  height: 100%;
 
   @media screen and (max-width: 1199px) {
     min-width: 386px;
-    min-height: 292px;
   }
 
   @media screen and (max-width: 767px) {
