--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -29,6 +29,14 @@
   margin: 0;
   padding: 10px 0 5px 0;
 
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @media screen and (max-width: 1199px) {
     width: 82px;
     height: 22px;
@@ -48,12 +56,12 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 0 0 0 31%;
+  margin: 0 0 0 31.5%;
   padding: 0;
   list-style-type: none;
 
   @media screen and (max-width: 1199px) {
-    margin: 0 0 0 20%;
+    margin: 0 0 0 21%;
     max-width: 425px;
   }
 
@@ -79,7 +87,7 @@
 
 .footer__item {
   margin: 0;
-  margin-right: 25px;
+  margin-right: 41px;
   padding: 0;
 
   &:last-child {
@@ -87,7 +95,7 @@
   }
 
   @media screen and (max-width: 1199px) {
-    margin-right: 15px;
+    margin-right: 31px;
   }
 
   @media screen and (max-width: 767px) {
@@ -103,6 +111,14 @@
   font-size: 14px;
   line-height: 16px;
   color: $color-default-white;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 
   @media screen and (max-width: 767px) {
     font-size: 16px;
