--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -122,6 +122,8 @@
 
 .gym__video-wrapper {
   position: relative;
+  width: 364px;
+  height: 228px;
   margin: -113px 0 0 -63px;
 
   @media screen and (max-width: 1199px) {
@@ -133,6 +135,7 @@
   @media screen and (max-width: 767px) {
     width: 100%;
     margin-top: 0;
+    padding-top: 52%;
   }
 }
 
@@ -140,19 +143,22 @@
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   z-index: 2;
 
   @media screen and (max-width: 767px) {
     width: 100%;
-    height: 167px;
+    height: 100%;
   }
 }
 
 .gym__video-cover {
-  position: relative;
-  width: 364px;
-  height: 228px;
-  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
   &.hidden {
     display: none;
@@ -160,12 +166,12 @@
 
   @media screen and (max-width: 1199px) {
     width: 266px;
-    height: 167px;
   }
 
   @media screen and (max-width: 767px) {
     width: 100%;
     margin-top: 0;
+    padding-top: 52%;
   }
 }
 
@@ -176,6 +182,8 @@
   height: 228px;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   display: block;
   z-index: 3;
   background-color: #14367a;
@@ -188,7 +196,9 @@
 
   @media screen and (max-width: 767px) {
     width: 100%;
+    height: 100%;
     margin-top: 0;
+    padding-top: 52%;
   }
 }
 
@@ -196,6 +206,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   border: none;
   z-index: 1;
 
@@ -206,12 +218,15 @@
 
   @media screen and (max-width: 767px) {
     width: 100%;
+    height: 100%;
   }
 }
 
 .gym__video-button {
-  position: relative;
-  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border: none;
   z-index: 10;
   width: 72px;
