--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -163,32 +163,45 @@
 }
 
 .coaches__container {
-  height: 100%;
+  height: 10%;
   width: 100%;
   position: absolute;
   left: 0;
-  top: 0;
+  bottom: 0;
   padding: 76px 40px 50px 40px;
-  background-color: rgba(16, 38, 84, 0.89);
   z-index: 1;
-  opacity: 0;
-  pointer-events: none;
 
   @media screen and (max-width: 767px) {
     padding: 65px 33px 48px 33px;
   }
 }
 
+.coaches__container-next {
+  position: relative;
+  z-index: 1;
+  place-self: start center;
+  display: none;
+  width: 100%;
+}
+
 .coaches__item:hover .coaches__container,
 .coaches__item:focus .coaches__container,
 .coaches__item:focus-within .coaches__container {
-  opacity: 1;
-  pointer-events: all;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(16, 38, 84, 0.89);
+  overflow-y: scroll;
 
   @media screen and (max-width: 1199px) {
     opacity: 0;
     pointer-events: none;
   }
+}
+
+.coaches__item:hover .coaches__container-next,
+.coaches__item:focus .coaches__container-next,
+.coaches__item:focus-within .coaches__container-next {
+  display: block;
 }
 
 .coaches__item:hover .coaches__heading,
@@ -252,7 +265,7 @@
   margin: 0;
   padding: 0 0 0 31px;
   max-height: 130px;
-  overflow-y: scroll;
+  // overflow-y: scroll;
 
   @media screen and (max-width: 767px) {
     padding: 0 0 0 17px;
