--- a/source/sass/blocks/slider-button.scss
+++ b/source/sass/blocks/slider-button.scss
@@ -5,6 +5,10 @@
   left: 0;
   width: 100%;
   height: 40px;
+  // transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   @media screen and (max-width: 767px) {
     top: 45%;
