--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -92,6 +92,8 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 150%;
+  place-self: center;
+
 
   @media screen and (max-width: 1199px) {
     left: 37%;
@@ -185,52 +187,43 @@
 }
 
 .coaches__item:hover .coaches__container,
-.coaches__item:focus .coaches__container,
+// .coaches__item:focus .coaches__container,
 .coaches__item:focus-within .coaches__container {
   height: 100%;
   width: 100%;
   background-color: rgba(16, 38, 84, 0.89);
   overflow-y: scroll;
-
-  @media screen and (max-width: 1199px) {
-    opacity: 0;
-    pointer-events: none;
-  }
 }
 
 .coaches__item:hover .coaches__container-next,
-.coaches__item:focus .coaches__container-next,
+// .coaches__item:focus .coaches__container-next,
 .coaches__item:focus-within .coaches__container-next {
   display: block;
 }
 
 .coaches__item:hover .coaches__heading,
-.coaches__item:focus .coaches__heading,
+// .coaches__item:focus .coaches__heading,
 .coaches__item:focus-within .coaches__heading {
   top: 52px;
   z-index: 10;
 
-  @media screen and (max-width: 1199px) {
-    top: 245px;
-  }
-
   @media screen and (max-width: 767px) {
-    top: 225px;
+    top: 42px;
   }
 }
 
-@media screen and (max-width: 1199px) {
-  .coaches__item:active .coaches__container,
-  .coaches__item:focus .coaches__container,
-  .coaches__item:focus-within .coaches__container {
-    opacity: 1;
-    pointer-events: all;
-  }
-}
+// @media screen and (max-width: 1199px) {
+//   .coaches__item:active .coaches__container,
+//   .coaches__item:focus .coaches__container,
+//   .coaches__item:focus-within .coaches__container {
+//     opacity: 1;
+//     pointer-events: all;
+//   }
+// }
 
 @media screen and (max-width: 1199px) {
   .coaches__item:active .coaches__heading,
-  .coaches__item:focus .coaches__heading,
+  // .coaches__item:focus .coaches__heading,
   .coaches__item:focus-within .coaches__heading {
     top: 52px;
     z-index: 10;
@@ -239,7 +232,7 @@
 
 @media screen and (max-width: 767px) {
   .coaches__item:active .coaches__heading,
-  .coaches__item:focus .coaches__heading,
+  // .coaches__item:focus .coaches__heading,
   .coaches__item:focus-within .coaches__heading {
     top: 42px;
   }
