--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -187,7 +187,7 @@
 }
 
 .coaches__item:hover .coaches__container,
-// .coaches__item:focus .coaches__container,
+.coaches__item:focus .coaches__container,
 .coaches__item:focus-within .coaches__container {
   height: 100%;
   width: 100%;
@@ -196,13 +196,13 @@
 }
 
 .coaches__item:hover .coaches__container-next,
-// .coaches__item:focus .coaches__container-next,
+.coaches__item:focus .coaches__container-next,
 .coaches__item:focus-within .coaches__container-next {
   display: block;
 }
 
 .coaches__item:hover .coaches__heading,
-// .coaches__item:focus .coaches__heading,
+.coaches__item:focus .coaches__heading,
 .coaches__item:focus-within .coaches__heading {
   top: 52px;
   z-index: 10;
@@ -212,18 +212,9 @@
   }
 }
 
-// @media screen and (max-width: 1199px) {
-//   .coaches__item:active .coaches__container,
-//   .coaches__item:focus .coaches__container,
-//   .coaches__item:focus-within .coaches__container {
-//     opacity: 1;
-//     pointer-events: all;
-//   }
-// }
-
 @media screen and (max-width: 1199px) {
   .coaches__item:active .coaches__heading,
-  // .coaches__item:focus .coaches__heading,
+  .coaches__item:focus .coaches__heading,
   .coaches__item:focus-within .coaches__heading {
     top: 52px;
     z-index: 10;
@@ -232,7 +223,7 @@
 
 @media screen and (max-width: 767px) {
   .coaches__item:active .coaches__heading,
-  // .coaches__item:focus .coaches__heading,
+  .coaches__item:focus .coaches__heading,
   .coaches__item:focus-within .coaches__heading {
     top: 42px;
   }
@@ -258,7 +249,6 @@
   margin: 0;
   padding: 0 0 0 31px;
   max-height: 130px;
-  // overflow-y: scroll;
 
   @media screen and (max-width: 767px) {
     padding: 0 0 0 17px;
