deploy: 4ecddcb6dd4540c475d19ab4bf682ba95758b5d3

--- a/css/style.css
+++ b/css/style.css
@@ -3183,7 +3183,7 @@ input:-webkit-autofill {
   position: absolute;
   left: 0;
   bottom: 0;
-  padding: 76px 40px 50px 40px;
+  padding: 10px 40px 50px 40px;
   z-index: 1;
 }
 
@@ -3202,6 +3202,7 @@ input:-webkit-autofill {
 .coaches__item:focus-within .coaches__container {
   height: 100%;
   width: 100%;
+  padding: 40px 40px 50px;
   background-color: rgba(16, 38, 84, 0.89);
   overflow-y: scroll;
 }
@@ -3215,8 +3216,10 @@ input:-webkit-autofill {
 .coaches__item:hover .coaches__heading,
 .coaches__item:focus .coaches__heading,
 .coaches__item:focus-within .coaches__heading {
-  top: 52px;
-  z-index: 10;
+  position: relative;
+  margin: 0 0 0 18%;
+  padding: 0;
+  left: 0;
 }
 
 .coaches__container p {
